fix dark colors readability and contrast

--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 :root {
   --light-bg: #f5f4fe;
-  --dark-bg: #141414;
+  --dark-bg: #000;
   --primary-red: #ed2c4a;
   --primary-blue: #3e54a3;
-  --secondary-gray: #737373;
+  --secondary-gray: #474747;
   --secondary-red:#fd8182;
   --secondary-blue: #8289c2;
-  --dark-card-bg: #1e1e1e;
+  --dark-card-bg: #808080;
 }
 
 * {
@@ -68,7 +68,7 @@ nav ul li button{
 }
 
 .counter{
-  color: var(--primary-blue);
+  color: var(--primary-red);
   font-size: 18px;
   text-align: right;
   margin-right: 3.5rem;
